{{$NEXT}}
   * better dist.ini
   * Initial version, forked from Riak::Light (dams)