@@ -11,7 +11,6 @@ subtest "new and default attrs values" => sub {
         'Riak::Client' => [
             host    => '127.0.0.1',
             port    => 9087,
-            autodie => 0,
             driver  => undef
         ],
         "a new client"
@@ -20,7 +19,6 @@ subtest "new and default attrs values" => sub {
     is( $client->r,       2,   "default r  should be 2" );
     is( $client->w,       2,   "default w  should be 2" );
     is( $client->dw,      2,   "default dw should be 2" );
-    ok( !$client->autodie,         "default autodie shoudl be false" );
     ok( $client->timeout_provider, 'Riak::Client::Timeout::Select' );
 };
 
@@ -30,7 +28,6 @@ subtest "new and other attrs values" => sub {
             host             => '127.0.0.1',
             port             => 9087,
             timeout          => 0.2,
-            autodie          => 1,
             r                => 1,
             w                => 1,
             dw               => 1,
@@ -45,7 +42,6 @@ subtest "new and other attrs values" => sub {
     is( $client->r,       1,   "r  should be 1" );
     is( $client->w,       1,   "w  should be 1" );
     is( $client->dw,      1,   "dw should be 1" );
-    ok( $client->autodie,          "autodie should be true" );
     ok( $client->timeout_provider, 'Riak::Client::Timeout::TimeOut' );
     is( $client->in_timeout,  2);
     is( $client->out_timeout, 4);
